add lottery and search methods
